[gd_scene load_steps=5 format=3 uid="uid://g2mqyx5gavhl"]

[ext_resource type="Script" path="res://bubble.gd" id="1_hmgoo"]
[ext_resource type="Texture2D" uid="uid://cl5pblfggkpv7" path="res://assets/bubblebullet.png" id="1_wti0q"]
[ext_resource type="AudioStream" uid="uid://c0kylkydhyo3" path="res://assets/sfx/bubble_pop.wav" id="3_nng03"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1euxa"]
radius = 112.0

[node name="Bubble" type="RigidBody2D" groups=["PlayerProjectile"]]
collision_layer = 128
collision_mask = 5
mass = 0.001
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_hmgoo")
metadata/_edit_group_ = true

[node name="Bubblebullet" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_wti0q")
region_enabled = true
region_rect = Rect2(441, 46, 221, 230)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.15, 0.15)
shape = SubResource("CircleShape2D_1euxa")

[node name="BubblePop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nng03")
volume_db = 5.622

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="BubblePop" to="." method="_on_bubble_pop_finished"]
